--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,13 @@ branches:
   only:
     - master
 
+ 
+before_install:
+ - wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
+ - unzip -qq apache-maven-3.3.9-bin.zip
+ - export M2_HOME=$PWD/apache-maven-3.3.9
+ - export PATH=$M2_HOME/bin:$PATH
+
 script:
   -  mvn clean install
 
- 
