--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,16 @@ matrix:
       sudo: required
       
 before_install:
- - sudo apt-get update
  - wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
  - unzip -qq apache-maven-3.3.9-bin.zip
  - export M2_HOME=$PWD/apache-maven-3.3.9
  - export PATH=$M2_HOME/bin:$PATH
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 10 # give xvfb some time to start
+
 
 script:
   -  mvn clean install
