filter test to debug failing tests

--- a/test/gw4e-eclipse-plugin-tests/pom.xml
+++ b/test/gw4e-eclipse-plugin-tests/pom.xml
@@ -70,7 +70,9 @@
             <phase>process-sources</phase>
             <configuration>
               <licenseName>mit</licenseName>
-            
+              <includes>
+                <include>*.java</include>
+              </includes>            
               <roots>
                 <root>src</root>
               </roots>
