--- a/test/gw4e-eclipse-plugin-tests/pom.xml
+++ b/test/gw4e-eclipse-plugin-tests/pom.xml
@@ -108,7 +108,7 @@
 					<argLine>-Dgw.mvn.repository=${user.home}/.m2/repository ${ui.test.vmargs}</argLine>
 					<appArgLine>-data ${project.basedir}/target/workspace -nl en -consoleLog</appArgLine>
 					<includes>
-                <include>**/GraphWalkerFacadeTest.class</include>
+                <include>**/*.class</include>
           </includes>
 				</configuration>
 			</plugin>
