--- a/bundles/gw4e-eclipse-core/build.properties
+++ b/bundles/gw4e-eclipse-core/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                lib/hamcrest-core-1.3.jar,\
                lib/junit-4.12.jar,\
                lib/slf4j-api-1.7.25.jar,\
-               src/org/
+               src/org/,\
+               logback.xml
