update build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,12 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 10 # give xvfb some time to start
 
-jobs:
-  include:
-    - stage: test
-      script: "mvn clean install -Pgw4e-eclipse-plugin-tests"
-      script: "mvn clean install -Pgw4e-eclipse-plugin-ui-tests"
-      script: "mvn clean install -Pgw4e-eclipse-studio-tests"
-      script: "mvn clean install -Pgw4e-eclipse-studio-ui-tests"
+
+script: 
+    - "mvn clean install -Pgw4e-eclipse-plugin-tests"
+    - "mvn clean install -Pgw4e-eclipse-plugin-ui-tests"
+    - "mvn clean install -Pgw4e-eclipse-studio-tests"
+    - "mvn clean install -Pgw4e-eclipse-studio-ui-tests"
       
  
 
