--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ branches:
 os:
     - linux
 
+dist: trusty
+
+sudo: required
 
 before_install:
  - wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
