--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ jobs:
   - stage: copy
     script: ./copy.sh
   - stage: deploy
-      script: skip     # usually you do not want to rerun any tests
-      deploy: &releases
+    script: skip     
+    deploy: &releases
         provider: releases
         skip_cleanup: true
         api_key:
