--- a/bundles/gw4e-eclipse-cheatsheet/plugin.xml
+++ b/bundles/gw4e-eclipse-cheatsheet/plugin.xml
@@ -16,7 +16,7 @@
          	<description>GW4E Plugin Tutorials</description>
       </cheatsheet>
       <cheatsheet
-            name="2 - Getting Started with LifeCycle"
+            name="2 - Managing Graph Models &amp; Tests LifeCycle"
             category="gw4e-eclipse-cheatsheet.category"
              contentFile="src/org/gw4e/eclipse/cheatsheet/lifecycle/en/gw4e_composite.xml"
             composite="true"
