--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ os:
 dist: trusty
 sudo: required
 before_install:
-- mkdir ~\/.ssh
+- mkdir $HOME/.ssh
 - openssl aes-256-cbc -K $encrypted_ccd276b8e5b2_key -iv $encrypted_ccd276b8e5b2_iv
-  -in id_rsa.pub.enc -out ~\/.ssh/id_rsa.pub -d
+  -in id_rsa.pub.enc -out $HOME/.ssh/id_rsa.pub -d
 - wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
 - unzip -qq apache-maven-3.3.9-bin.zip
 - export M2_HOME=$PWD/apache-maven-3.3.9
