add tests for Wizard

--- a/bundles/gw4e-eclipse-core/.classpath
+++ b/bundles/gw4e-eclipse-core/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/graphwalker-cli-4.0.0-SNAPSHOT.jar" sourcepath="/graphwalker-dsl/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/graphwalker-cli-4.0.0-SNAPSHOT.jar" sourcepath="/graphwalker-io/src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
