--- a/bundles/gw4e-eclipse-core/build.properties
+++ b/bundles/gw4e-eclipse-core/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/graphwalker-cli-4.0.0-SNAPSHOT1.jar,\
+               lib/graphwalker-cli-4.0.0-SNAPSHOT.jar,\
                lib/hamcrest-core-1.3.jar,\
                lib/junit-4.12.jar,\
                lib/slf4j-api-1.7.25.jar,\
