--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+		<dependency>
+ 		   <groupId>org.apache.poi</groupId>
+ 		   <artifactId>poi</artifactId>
+		    <version>3.16</version>
+		</dependency>		
 	</dependencies>
 
 	<properties>
