--- a/bundles/gw4e-eclipse-core/.classpath
+++ b/bundles/gw4e-eclipse-core/.classpath
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections4-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/curvesapi-1.04.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-3.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-3.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi-ooxml-schemas-3.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/graphwalker-cli-4.0.0-SNAPSHOT.jar" sourcepath="/graphwalker-core/src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.12.jar"/>
