--- a/bundles/gw4e-eclipse-core/build.properties
+++ b/bundles/gw4e-eclipse-core/build.properties
@@ -7,4 +7,12 @@ bin.includes = META-INF/,\
                lib/junit-4.12.jar,\
                lib/slf4j-api-1.7.25.jar,\
                src/org/,\
-               logback.xml
+               logback.xml,\
+               lib/commons-codec-1.10.jar,\
+               lib/commons-collections4-4.1.jar,\
+               lib/curvesapi-1.04.jar,\
+               lib/poi-3.16.jar,\
+               lib/poi-ooxml-3.16.jar,\
+               lib/poi-ooxml-schemas-3.16.jar,\
+               lib/stax-api-1.0.1.jar,\
+               lib/xmlbeans-2.6.0.jar
