--- a/bundles/gw4e-eclipse-plugin/build.properties
+++ b/bundles/gw4e-eclipse-plugin/build.properties
@@ -4,4 +4,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons,\
-               icons/
+               icons/,\
+               manualTests.zip
+src.includes = icons/,\
+               manualTests.zip
