remove useless file

--- a/bundles/gw4e-eclipse-plugin/build.properties
+++ b/bundles/gw4e-eclipse-plugin/build.properties
@@ -3,8 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons,\
                icons/,\
-               manualTests.zip
-src.includes = icons/,\
-               manualTests.zip
+               icons
+src.includes = icons/
