fix icons displayed ofr Oxygen

--- a/bundles/editor/gw4e.eclipse.dsl.policies.ide/xtend-gen/gw4e/eclipse/dsl/ide/.gitignore
+++ b/bundles/editor/gw4e.eclipse.dsl.policies.ide/xtend-gen/gw4e/eclipse/dsl/ide/.gitignore
@@ -2,3 +2,5 @@
 /.DSLPoliciesIdeSetup.java._trace
 /DSLPoliciesIdeModule.java
 /DSLPoliciesIdeSetup.java
+/.DSLPoliciesIdeModule.xtendbin
+/.DSLPoliciesIdeSetup.xtendbin
