--- a/bundles/editor/gw4e.eclipse.dsl.policies.ui/xtend-gen/gw4e/eclipse/dsl/ui/labeling/.gitignore
+++ b/bundles/editor/gw4e.eclipse.dsl.policies.ui/xtend-gen/gw4e/eclipse/dsl/ui/labeling/.gitignore
@@ -2,3 +2,5 @@
 /.DSLPoliciesLabelProvider.java._trace
 /DSLPoliciesDescriptionLabelProvider.java
 /DSLPoliciesLabelProvider.java
+/.DSLPoliciesDescriptionLabelProvider.xtendbin
+/.DSLPoliciesLabelProvider.xtendbin
