--- a/bundles/editor/gw4e.eclipse.dsl.policies/xtend-gen/gw4e/eclipse/dsl/.gitignore
+++ b/bundles/editor/gw4e.eclipse.dsl.policies/xtend-gen/gw4e/eclipse/dsl/.gitignore
@@ -2,3 +2,5 @@
 /.DSLPoliciesStandaloneSetup.java._trace
 /DSLPoliciesRuntimeModule.java
 /DSLPoliciesStandaloneSetup.java
+/.DSLPoliciesRuntimeModule.xtendbin
+/.DSLPoliciesStandaloneSetup.xtendbin
