fix test for Eclipse 4.7

--- a/test/gw4e-eclipse-plugin-ui-tests/pom.xml
+++ b/test/gw4e-eclipse-plugin-ui-tests/pom.xml
@@ -114,7 +114,7 @@
 					<useUIThread>false</useUIThread>
 					<product>org.eclipse.sdk.ide</product>
 					<application>org.eclipse.ui.ide.workbench</application>
-					<argLine>-Dgw.mvn.repository=${user.home}/.m2/repository ${ui.test.vmargs}</argLine>
+					<argLine>-Xms512m -Xmx1024m -Dgw.mvn.repository=${user.home}/.m2/repository ${ui.test.vmargs}</argLine>
 					<appArgLine>-data ${project.basedir}/target/workspace -nl en -consoleLog</appArgLine>
 					<includes>
               <include>**/*.class</include>
