--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -42,22 +42,41 @@
 		<graphwalker.cli>graphwalker-cli-${project.version}.jar</graphwalker.cli>
 		<graphwalker.cli.url>https://github.com/gw4e/gw4e.project/raw/gw-repo-4.0.0/${graphwalker.cli}</graphwalker.cli.url>
 	</properties>
-
-	<build>
+ <profiles>
+    <profile>
+      <id>release</id>
+      <activation>
+      	<activeByDefault>true</activeByDefault>
+      </activation>
+ 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.0.0</version>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.0.2</version>
+        <executions>
+          <execution>
+            <id>copy-and-install-graphwalker-cli</id>
+            <phase>install</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <artifactItems>
+            <artifactItem>
+              <groupId>org.graphwalker</groupId>
+              <artifactId>graphwalker-cli</artifactId>
+              <version>4.0.0-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${plugin.core.lib}</outputDirectory>
+            </artifactItem>
+          </artifactItems>
+        </configuration>
+      </plugin>
+      <!--
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>download-maven-plugin</artifactId>
@@ -77,6 +96,59 @@
 					</execution>
 				</executions>
 			</plugin>
+		-->
+		</plugins>
+	</build>     
+    </profile>
+    <profile>
+      <id>dev</id>
+   <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.8</version>
+          <executions>
+            <execution>
+              <id>copy-installed</id>
+              <phase>install</phase>
+              <goals>
+                <goal>copy</goal>
+              </goals>
+              <configuration>
+                <artifactItems>
+                  <artifactItem>
+                    <groupId>graphwalker-project</groupId>
+                    <artifactId>graphwalker-cli</artifactId>
+                    <version>4.0.0-SNAPSHOT</version>
+                  </artifactItem>
+                </artifactItems>
+                <outputDirectory>${plugin.core.lib}</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+    </profile>    
+  </profiles>
+  
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+ 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
