--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -45,38 +45,8 @@
  <profiles>
     <profile>
       <id>release</id>
-      <activation>
-      	<activeByDefault>true</activeByDefault>
-      </activation>
  	<build>
 		<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.0.2</version>
-        <executions>
-          <execution>
-            <id>copy-and-install-graphwalker-cli</id>
-            <phase>install</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <artifactItems>
-            <artifactItem>
-              <groupId>org.graphwalker</groupId>
-              <artifactId>graphwalker-cli</artifactId>
-              <version>4.0.0-SNAPSHOT</version>
-              <type>jar</type>
-              <overWrite>false</overWrite>
-              <outputDirectory>${plugin.core.lib}</outputDirectory>
-            </artifactItem>
-          </artifactItems>
-        </configuration>
-      </plugin>
-      <!--
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>download-maven-plugin</artifactId>
@@ -96,7 +66,6 @@
 					</execution>
 				</executions>
 			</plugin>
-		-->
 		</plugins>
 	</build>     
     </profile>
@@ -118,9 +87,9 @@
               <configuration>
                 <artifactItems>
                   <artifactItem>
-                    <groupId>graphwalker-project</groupId>
+                    <groupId>org.graphwalker</groupId>
                     <artifactId>graphwalker-cli</artifactId>
-                    <version>4.0.0-SNAPSHOT</version>
+                    <version>${project.version}</version>
                   </artifactItem>
                 </artifactItems>
                 <outputDirectory>${plugin.core.lib}</outputDirectory>
@@ -131,8 +100,8 @@
       </plugins>
     </build>
     </profile>    
-  </profiles>
-  
+    <profile>
+     <id>deflt</id>
 	<build>
 		<plugins>
 			<plugin>
@@ -148,7 +117,6 @@
 					</execution>
 				</executions>
 			</plugin>
- 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -208,7 +176,7 @@
 						<phase>install</phase>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> 
 			<plugin>
 				<groupId>com.google.code.maven-replacer-plugin</groupId>
 				<artifactId>maven-replacer-plugin</artifactId>
@@ -233,6 +201,9 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build>      
+    </profile>    
+  </profiles>
+
 </project>
 
