--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -102,6 +102,9 @@
     </profile>    
     <profile>
      <id>deflt</id>
+     <activation>
+      	<activeByDefault>true</activeByDefault>
+     </activation>
 	<build>
 		<plugins>
 			<plugin>
@@ -132,6 +135,25 @@
 						</fileset>
 					</filesets>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.googlecode.maven-download-plugin</groupId>
+				<artifactId>download-maven-plugin</artifactId>
+				<version>1.3.0</version>
+				<executions>
+					<execution>
+						<id>install-graphwalker-cli</id>
+						<phase>install</phase>
+						<goals>
+							<goal>wget</goal>
+						</goals>
+						<configuration>
+							<url>${graphwalker.cli.url}</url>
+							<unpack>false</unpack>
+							<outputDirectory>${plugin.core.lib}</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
