--- a/test/gw4e-eclipse-plugin-ui-tests/pom.xml
+++ b/test/gw4e-eclipse-plugin-ui-tests/pom.xml
@@ -24,17 +24,17 @@
 	</prerequisites>
 
 	<dependencies>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.7</version>
-    </dependency>
-    <dependency>
-     <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>19.0</version>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+	</dependencies>
 
 	<profiles>
 		<profile>
@@ -60,69 +60,127 @@
 				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
 			</properties>
 		</profile>
+		<profile>
+			<id>processheader</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>license-maven-plugin</artifactId>
+						<version>1.12</version>
+						<configuration>
+							<verbose>false</verbose>
+							<addSvnKeyWords>true</addSvnKeyWords>
+							<inceptionYear>2017</inceptionYear>
+							<organizationName>gw4e-project</organizationName>
+							<projectName>gw4e</projectName>
+						</configuration>
+						<executions>
+							<execution>
+								<id>first</id>
+								<goals>
+									<goal>update-file-header</goal>
+								</goals>
+								<phase>process-sources</phase>
+								<configuration>
+									<licenseName>mit</licenseName>
+									<includes>
+										<include>*.java</include>
+									</includes>
+									<roots>
+										<root>src</root>
+									</roots>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>gw4e-eclipse-plugin-ui-testsPart1</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<dependencies>
+								<dependency>
+									<type>p2-installable-unit</type>
+									<artifactId>org.eclipse.sdk.feature.group</artifactId>
+								</dependency>
+								<dependency>
+									<type>eclipse-feature</type>
+									<artifactId>org.eclipse.jdt</artifactId>
+								</dependency>
+							</dependencies>
+							<!-- <debugPort>7777</debugPort> -->
+							<useUIHarness>true</useUIHarness>
+							<useUIThread>false</useUIThread>
+							<product>org.eclipse.sdk.ide</product>
+							<application>org.eclipse.ui.ide.workbench</application>
+							<argLine>-Xms512m -Xmx1024m
+								-Dgw.mvn.repository=${user.home}/.m2/repository
+								${ui.test.vmargs}</argLine>
+							<appArgLine>-data ${project.basedir}/target/workspace -nl en
+								-consoleLog</appArgLine>
+							<includes>
+								<include>**/org/gw4e/eclipse/test/perspective/*.class</include>
+								<include>**/org/gw4e/eclipse/test/preferences/*.class</include>
+								<include>**/org/gw4e/eclipse/test/project/*.class</include>
+								<include>**/org/gw4e/eclipse/test/refactoring/*.class</include>
+								<include>**/org/gw4e/eclipse/test/run/*.class</include>
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>gw4e-eclipse-plugin-ui-testsPart2</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<dependencies>
+								<dependency>
+									<type>p2-installable-unit</type>
+									<artifactId>org.eclipse.sdk.feature.group</artifactId>
+								</dependency>
+								<dependency>
+									<type>eclipse-feature</type>
+									<artifactId>org.eclipse.jdt</artifactId>
+								</dependency>
+							</dependencies>
+							<!-- <debugPort>7777</debugPort> -->
+							<useUIHarness>true</useUIHarness>
+							<useUIThread>false</useUIThread>
+							<product>org.eclipse.sdk.ide</product>
+							<application>org.eclipse.ui.ide.workbench</application>
+							<argLine>-Xms512m -Xmx1024m
+								-Dgw.mvn.repository=${user.home}/.m2/repository
+								${ui.test.vmargs}</argLine>
+							<appArgLine>-data ${project.basedir}/target/workspace -nl en
+								-consoleLog</appArgLine>
+							<includes>
+								<include>**/org/gw4e/eclipse/test/runasmanual/*.class</include>
+								<include>**/org/gw4e/eclipse/test/staticgenerator/*.class</include>
+								<include>**/org/gw4e/eclipse/test/template/*.class</include>
+								<include>**/org/gw4e/eclipse/test/view/*.class</include>
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
-	<build>
-		<plugins>
- 	
-     <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>1.12</version>
-        <configuration>
-          <verbose>false</verbose>
-          <addSvnKeyWords>true</addSvnKeyWords>
-          <inceptionYear>2017</inceptionYear>
-          <organizationName>gw4e-project</organizationName>
-          <projectName>gw4e</projectName>
-        </configuration>
-        <executions>
-          <execution>
-            <id>first</id>
-            <goals>
-              <goal>update-file-header</goal>
-            </goals>
-            <phase>process-sources</phase>
-            <configuration>
-              <licenseName>mit</licenseName>
-              <includes>
-                <include>*.java</include>
-              </includes>
-              <roots>
-                <root>src</root>
-              </roots>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>				
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<dependencies>
-						<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>org.eclipse.sdk.feature.group</artifactId>
-						</dependency>
-						<dependency>
-							<type>eclipse-feature</type>
-							<artifactId>org.eclipse.jdt</artifactId>
-						</dependency>
-					</dependencies>
-			<!--		<debugPort>7777</debugPort> -->
-					<useUIHarness>true</useUIHarness>
-					<useUIThread>false</useUIThread>
-					<product>org.eclipse.sdk.ide</product>
-					<application>org.eclipse.ui.ide.workbench</application>
-					<argLine>-Xms512m -Xmx1024m -Dgw.mvn.repository=${user.home}/.m2/repository ${ui.test.vmargs}</argLine>
-					<appArgLine>-data ${project.basedir}/target/workspace -nl en -consoleLog</appArgLine>
-					<includes>
-              <include>**/*.class</include>
-          </includes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	
 </project>
   
