--- a/test/gw4e-eclipse-plugin-ui-tests/pom.xml
+++ b/test/gw4e-eclipse-plugin-ui-tests/pom.xml
@@ -57,7 +57,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+				<ui.test.vmargs>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
