--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -26,12 +26,11 @@
  		   <artifactId>poi</artifactId>
 		    <version>3.16</version>
 		</dependency>		
-	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi-ooxml</artifactId>
-	    <version>3.16</version>
-	</dependency>
-
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.16</version>
+		</dependency>
 	</dependencies>
  
 	
@@ -42,6 +41,7 @@
 		<graphwalker.cli>graphwalker-cli-${project.version}.jar</graphwalker.cli>
 		<graphwalker.cli.url>https://github.com/gw4e/gw4e.project/raw/gw-repo-4.0.0/${graphwalker.cli}</graphwalker.cli.url>
 	</properties>
+	
  <profiles>
     <profile>
      <id>deflt</id>
@@ -56,11 +56,35 @@
 				<version>3.0.0</version>
 				<executions>
 					<execution>
+						<id>copy-dependencies-to-dependency-directory</id>
 						<phase>initialize</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
+						<configuration>
+              				<outputDirectory>${basedir}/target/dependency</outputDirectory>
+              				<overWriteReleases>false</overWriteReleases>
+              				<overWriteSnapshots>false</overWriteSnapshots>
+              				<overWriteIfNewer>true</overWriteIfNewer>
+            			</configuration>
 					</execution>
+          		    <execution>
+              			<id>copy-installed</id>
+		        	      <phase>install</phase>
+		           		   <goals>
+ 		    		           <goal>copy</goal>
+		   		           </goals>
+		   		           <configuration>
+		  		              	<artifactItems>
+ 		 		                	<artifactItem>
+		        		            	<groupId>org.graphwalker</groupId>
+		              		      		<artifactId>graphwalker-cli</artifactId>
+		                  		  		<version>${project.version}</version>
+		                  			</artifactItem>
+ 		               			</artifactItems>
+		                		<outputDirectory>${plugin.core.lib}</outputDirectory>
+		              		</configuration>
+		            </execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -79,32 +103,8 @@
 					</filesets>
 				</configuration>
 			</plugin>
-			<!--
-			<plugin>
-          		<groupId>org.apache.maven.plugins</groupId>
-          		<artifactId>maven-dependency-plugin</artifactId>
-          		<version>2.8</version>
-          		<executions>
-          		  <execution>
-              		<id>copy-installed</id>
-		              <phase>install</phase>
-		              <goals>
- 		               <goal>copy</goal>
-		              </goals>
-		              <configuration>
-		                <artifactItems>
- 		                 <artifactItem>
-		                    <groupId>org.graphwalker</groupId>
-		                    <artifactId>graphwalker-cli</artifactId>
-		                    <version>${project.version}</version>
-		                  </artifactItem>
- 		               </artifactItems>
-		                <outputDirectory>${plugin.core.lib}</outputDirectory>
-		              </configuration>
-		            </execution>
-		          </executions>
-	        </plugin>
-	        -->
+			 
+	        
 			<plugin>
 				<groupId>com.googlecode.maven-download-plugin</groupId>
 				<artifactId>download-maven-plugin</artifactId>
@@ -124,6 +124,8 @@
 					</execution>
 				</executions>
 			</plugin>
+		 
+			 
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.0</version>
