add project classes when generating offline

--- a/bundles/gw4e-eclipse-core/build.properties
+++ b/bundles/gw4e-eclipse-core/build.properties
@@ -15,4 +15,5 @@ bin.includes = META-INF/,\
                lib/poi-ooxml-3.16.jar,\
                lib/poi-ooxml-schemas-3.16.jar,\
                lib/stax-api-1.0.1.jar,\
-               lib/xmlbeans-2.6.0.jar
+               lib/xmlbeans-2.6.0.jar,\
+               lib/commons-exec-1.3.jar
