--- a/bundles/gw4e-eclipse-core/.classpath
+++ b/bundles/gw4e-eclipse-core/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-exec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections4-4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/curvesapi-1.04.jar"/>
