--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -20,6 +20,11 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+		</dependency> 
+		<dependency>
+  		  <groupId>org.apache.commons</groupId>
+    	  <artifactId>commons-exec</artifactId>
+   		  <version>1.3</version>
 		</dependency>
 		<dependency>
  		   <groupId>org.apache.poi</groupId>
