--- a/gwdependencies/pom.xml
+++ b/gwdependencies/pom.xml
@@ -36,6 +36,11 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>3.16</version>
 		</dependency>
+		<dependency>
+   			 <groupId>com.google.code.gson</groupId>
+   			 <artifactId>gson</artifactId>
+    		 <version>2.3.1</version>
+		</dependency>
 	</dependencies>
  
 	
